<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/counter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:textSize="16sp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginRight="16dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="16dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/check2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:button="@drawable/custom_checkbox"
                    android:padding="0dp"
                    android:theme="@style/CustomCheckbox" />

                <TextView
                    android:id="@+id/question2"
                    android:layout_width="0dp"
                    android:layout_height="96dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:text="@string/none"
                    android:textSize="32sp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="8dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:textSize="20sp"
                        android:text="@string/a" />

                    <TextView
                        android:id="@+id/choiceA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/none"
                        android:textSize="20sp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="8dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:textSize="20sp"
                        android:text="@string/b" />

                    <TextView
                        android:id="@+id/choiceB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/none"
                        android:textSize="20sp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/C"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="8dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:textSize="20sp"
                        android:text="@string/c" />

                    <TextView
                        android:id="@+id/choiceC"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/none"
                        android:textSize="20sp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/D"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="8dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/d" />

                    <TextView
                        android:id="@+id/choiceD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/none"
                        android:textSize="20sp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:backgroundTint="#c0c0c0"
                android:clickable="true"
                android:contentDescription="@string/icon1"
                android:minHeight="48dp"
                app:srcCompat="@drawable/ic_baseline_navigate_before_24"
                tools:ignore="ImageContrastCheck" />

            <ImageButton
                android:id="@+id/answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="#00FFFFFF"
                android:clickable="true"
                app:srcCompat="@drawable/ic_baseline_auto_stories_24" />

            <ImageButton
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="#c0c0c0"
                android:clickable="true"
                android:contentDescription="@string/icon2"
                android:minHeight="48dp"
                app:srcCompat="@drawable/ic_baseline_navigate_next_24"
                tools:ignore="ImageContrastCheck" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/correct"
        android:layout_width="196dp"
        android:layout_height="196dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="28dp"
        android:backgroundTint="#c0c0c0"
        android:clickable="false"
        android:contentDescription="@string/icon1"
        android:minHeight="48dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/ic_baseline_radio_button_unchecked_24"
        tools:ignore="ImageContrastCheck" />
</FrameLayout>